subprojects/swen430/src/test/resources/tests/valid/Is_Valid_5.while
[real] f([int|real] xs) {
    if(xs is [real]) {
        return ([real]) xs;
    } else {
        return [];
    }
}

void main() {
    print f([1.0,2.0,3.0]);
    print f([1.0,2,3.0]);
    print f([1,2,3]);
}
