subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_30.while
real f({int f} xs) {
    return xs.f;
}